--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./scripts.js"></script>
+    <script src="../src/js/scripts.js"></script>
+    
 </head>
 
 <body>
